--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -13,11 +13,9 @@
 
 // Contains the first comment and all replies.
 .comments-container
-  +margin(0)
-  +padding(0)
+  +list-unstyled
   display: flex
   flex-direction: column
-  list-style-type: none
   position: relative
 
   &.has-replies
