Comments: Style "Login to comment" section

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -147,6 +147,10 @@
   textarea
     border-top-left-radius: var(--border-radius-sm)
 
+// Shows the "Login to comment" button.
+.comment-form-login
+  +margin(2, y)
+
 .is-replying
   @extend %reply-timeline
 
