Comments: Fix recent style tweak

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -55,16 +55,17 @@
         opacity: 1
 
   &.isAuthor
-    > .comment-author
-      color: hsl(var(--color-info-h), var(--color-info-s), 64%)
+    > .comment-body
+      .comment-author
+        color: hsl(var(--color-info-h), var(--color-info-s), 64%)
 
   &.isOwn
     > .comment-body
       border-bottom-left-radius: var(--border-radius-sm)
       box-shadow: inset var(--border-width) 0 0 var(--color-warning)
 
-    > .comment-author
-      color: var(--color-warning)
+      .comment-author
+        color: var(--color-warning)
 
   &.isActive
     > .comment-body
@@ -75,8 +76,8 @@
       box-shadow: inset 0 0 0 var(--border-width) var(--color-success)
       border-bottom-left-radius: var(--border-radius)
 
-    > .comment-header
-      +make-disabled
+      .comment-header
+        +make-disabled
 
 .comment-avatar
   +margin(2, right)
