--- a/dillo/templates/dillo/components/_post_actions.pug
+++ b/dillo/templates/dillo/components/_post_actions.pug
@@ -15,7 +15,7 @@
 		| {% else %}
 		a.post-actions-btn(
 			data-toggle="tooltip", data-placement="bottom",
-			href="{% url 'account_signup' %}",
+			href="{% url 'account_login' %}",
 			title="{% trans 'Like' %}")
 			span
 				i.i-heart
@@ -39,7 +39,7 @@
 		| {% else %}
 		a.post-actions-btn(
 			class="btn-bookmark",
-			href="{% url 'account_signup' %}",
+			href="{% url 'account_login' %}",
 			title="{% trans 'Save to Bookmarks' %}",
 			data-toggle="tooltip", data-placement="bottom")
 			span
