Make comments generic
Before this commit, comments were only related to Posts. Since we
moved to an Entity-based model, it makes sense to relate Comments to
any model.
This commit drops the post field and introduces a GenericForeignKey
in its place, with a migration to swap Post ids with their Generic
representation.

In the process of adding this feature, a number of unit tests were
updated/fixed.

--- a/dillo/templates/dillo/components/_comment_form.pug
+++ b/dillo/templates/dillo/components/_comment_form.pug
@@ -1,26 +1,27 @@
 | {% load i18n %}
 
 #comment-form-container.comment-item.comment-form-container
-	| {% if request.user.is_authenticated %}
-	.comment-avatar
-		| {% include 'dillo/components/_profile_avatar.pug' with user=request.user size='small' %}
+  | {% if request.user.is_authenticated %}
+  .comment-avatar
+    | {% include 'dillo/components/_profile_avatar.pug' with user=request.user size='small' %}
 
-	.comment-body
-		form.comment-form(action="{% url 'comment_create' %}", method='post', id='js-comment-form')
-			| {{ form_comment.content }}
-			| {{ form_comment.post_id }}
-			| {{ form_comment.parent_comment_id }}
+  .comment-body
+    form.comment-form(action="{% url 'comment_create' %}", method='post', id='js-comment-form')
+      | {{ form_comment.content }}
+      | {{ form_comment.entity_content_type_id }}
+      | {{ form_comment.entity_object_id }}
+      | {{ form_comment.parent_comment_id }}
 
-			.btn-toolbar-row
-				button.btn.btn-link(
-					data-toggle="tooltip",
-					title="{% trans 'Cancel' %}",
-					type='button',
-					class="js-reply-cancel")
-					span
-						i.i-cancel
-				button.btn.btn-primary(
-					title="{% trans 'Send Comment' %}",
-					type='submit')
-					span {% trans "Comment" %}
-	| {% endif %}
+      .btn-toolbar-row
+        button.btn.btn-link(
+          data-toggle="tooltip",
+          title="{% trans 'Cancel' %}",
+          type='button',
+          class="js-reply-cancel")
+          span
+            i.i-cancel
+        button.btn.btn-primary(
+          title="{% trans 'Send Comment' %}",
+          type='submit')
+          span {% trans "Comment" %}
+  | {% endif %}
