--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -1,5 +1,6 @@
 | {% load i18n %}
 | {% load dillo_filters %}
+//- XXX - The Animato version of this template is in the animato project!
 
 nav.nav-primary.navbar.navbar-expand
 	.container
@@ -25,15 +26,6 @@ nav.nav-primary.navbar.navbar-expand
 						i.i-reel
 						span {% trans 'Reels' %}
 
-				li(class="{% if '/shorts' in request.path_info %}active{% endif %}")
-					a(href="{% url 'short-list' %}?sort=recent", title="{% trans 'Shorts Theater' %}")
-						i.i-shorts
-						span {% trans 'Shorts' %}
-
-				li(class="{% if '/rigs' in request.path_info %}active{% endif %}")
-					a(href="{% url 'rig-list' %}", title="{% trans 'Download Rigs' %}")
-						i.i-package
-						span {% trans 'Rigs' %}
 
 				li(class="{% if '/events' in request.path_info %}active{% endif %}")
 					a(href="{% url 'event_list' %}", title="{% trans 'Animation Events' %}")
