--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -6,38 +6,52 @@
 
 | {% block sidebar_classes %}hide-xs{% endblock sidebar_classes %}
 
+
+
 | {% block stream %}
 //- If we are exploring a tag, show it,
 //- otherwise show the list of trending tags.
 | {% if tag_name %}
 .post-stream-header
-	.post-stream-tag-container
-		h1
-			#[small #[i.i-hash]]{{ tag_name }}
-		| {% if tag_followers_count %}
-		.post-stream-tag-count {{ tag_followers_count }} follower{{ tag_followers_count|pluralize }}
-		| {% endif %}
-	// TODO: Posts count.
-	.post-stream-tag-action
-		| {% include 'dillo/components/_button_follow.pug' with target_object=tag %}
+  .post-stream-tag-container
+    h1
+      #[small #[i.i-hash]]{{ tag_name }}
+    | {% if tag_followers_count %}
+    .post-stream-tag-count {{ tag_followers_count }} follower{{ tag_followers_count|pluralize }}
+    | {% endif %}
+  // TODO: Posts count.
+  .post-stream-tag-action
+    | {% include 'dillo/components/_button_follow.pug' with target_object=tag %}
 | {% else %}
 
 | {% if processing_posts.posts %}
 .posts-processing
-	| #[span #[i.spinner-grow]] Your posts are being processed, hold tight...
+  | #[span #[i.spinner-grow]] Your posts are being processed, hold tight...
 | {% endif %}
+
+.nav-tabbar
+  .nav-tabbar-items
+    a.btn(
+      href="{% url 'explore' %}?layout=grid",
+      class="{% if '/explore/' in request.get_full_path %}active{% endif %}")
+      span {% trans 'Explore' %}
+    a.btn(
+      href="{% url 'explore-feed' %}?layout=list",
+      class="{% ifequal '/feed/?layout=list' request.get_full_path %}active{% endifequal %}")
+      span {% trans 'Activity' %}
+
 
 | {% if '/explore/' in request.path_info %}
 .feed-trending
-	| {% include 'dillo/components/_feed_trending.pug' %}
+  | {% include 'dillo/components/_feed_trending.pug' %}
 | {% endif %}
 | {% endif %}
 
 ul#posts-list.post-list(
-	class="post-stream-{% if layout == 'grid' %}grid{% else %}list{% endif %}",
-	data-embed_url="{{ query_url }}")
-	li.post-list-empty
-		.spinner-border
+  class="post-stream-{% if layout == 'grid' %}grid{% else %}list{% endif %}",
+  data-embed_url="{{ query_url }}")
+  li.post-list-empty
+    .spinner-border
 | {% endblock stream %}
 
 | {% block sidebar %}
@@ -45,44 +59,44 @@ ul#posts-list.post-list(
 | {% block navbar_upload_btn %}
 | {% if request.user.is_authenticated %}
 .sidebar-block.profile-sidebar
-	| {% include 'dillo/components/_profile_header_sidebar.pug' %}
+  | {% include 'dillo/components/_profile_header_sidebar.pug' %}
 | {% endif %}
 
 .sidebar-block
-	.btn-toolbar-row
-		.btn-group
-			a.btn(
-				title="{% trans 'List View' %}",
-				href="?layout=list",
-				data-toggle="tooltip",
-				class="{% if layout == 'list' %}is-active{% endif %}")
-				span
-					i.i-list
-			a.btn(
-				title="{% trans 'Grid View' %}",
-				href="?layout=grid",
-				data-toggle="tooltip",
-				class="{% if layout == 'grid' %}is-active{% endif %}")
-				span
-					i.i-grid
+  .btn-toolbar-row
+    .btn-group
+      a.btn(
+        title="{% trans 'List View' %}",
+        href="?layout=list",
+        data-toggle="tooltip",
+        class="{% if layout == 'list' %}is-active{% endif %}")
+        span
+          i.i-list
+      a.btn(
+        title="{% trans 'Grid View' %}",
+        href="?layout=grid",
+        data-toggle="tooltip",
+        class="{% if layout == 'grid' %}is-active{% endif %}")
+        span
+          i.i-grid
 
-		| {% url 'post_create' as btn_create_url %}
-		| {% trans 'Create a Post' as btn_label %}
-		| {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-edit" %}
+    | {% url 'post_create' as btn_create_url %}
+    | {% trans 'Create a Post' as btn_label %}
+    | {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-edit" %}
 | {% endblock navbar_upload_btn%}
 
 | {% if trending_tags %}
 .sidebar-block.feed-trending
-	| {% include 'dillo/components/_feed_trending.pug' %}
+  | {% include 'dillo/components/_feed_trending.pug' %}
 | {% endif %}
 
 | {% if upcoming_events %}
 .sidebar-block
-	| {% include 'dillo/components/_feed_events.pug' with events=upcoming_events events_title='Events' %}
+  | {% include 'dillo/components/_feed_events.pug' with events=upcoming_events events_title='Events' %}
 | {% endif %}
 
 .sidebar-block
-	| {% include 'dillo/components/_footer.pug' %}
+  | {% include 'dillo/components/_footer.pug' %}
 
 | {% endblock sidebar %}
 
@@ -91,83 +105,83 @@ ul#posts-list.post-list(
 | {{ processing_posts | json_script:"js-processing-posts" }}
 
 script.
-	/* When processing posts are detected, query for their status until they are 'published',
-	* and then reload the page. */
-	let processingPosts = JSON.parse(document.getElementById('js-processing-posts').textContent);
+  /* When processing posts are detected, query for their status until they are 'published',
+  * and then reload the page. */
+  let processingPosts = JSON.parse(document.getElementById('js-processing-posts').textContent);
 
-	function queryPostStatus(hashId) {
-		let statusUrl = '/p/' + hashId  + '/status';
-		$.get(statusUrl, function (data) {
-			if (data.status === 'published') location.reload();
-		})
-	}
+  function queryPostStatus(hashId) {
+    let statusUrl = '/p/' + hashId  + '/status';
+    $.get(statusUrl, function (data) {
+      if (data.status === 'published') location.reload();
+    })
+  }
 
-	function queryPostStatuses() {
-		for (let i = 0; i < processingPosts.posts.length; i++) {
-			let hashId = processingPosts.posts[i]
-			queryPostStatus(hashId)
-		}
-	}
+  function queryPostStatuses() {
+    for (let i = 0; i < processingPosts.posts.length; i++) {
+      let hashId = processingPosts.posts[i]
+      queryPostStatus(hashId)
+    }
+  }
 
-	if (processingPosts.posts) {
-		window.setInterval(queryPostStatuses, 3000);
-	}
+  if (processingPosts.posts) {
+    window.setInterval(queryPostStatuses, 3000);
+  }
 
 script.
-	$(function() {
+  $(function() {
 
-		let postsList = document.getElementById('posts-list');
-		let embedUrl = $(postsList).data('embed_url');
+    let postsList = document.getElementById('posts-list');
+    let embedUrl = $(postsList).data('embed_url');
 
-		//- Get content of the next page and append it to the existing list.
-		function triggerLoadPosts(ob){
+    //- Get content of the next page and append it to the existing list.
+    function triggerLoadPosts(ob){
 
-			//- If it's a URL, simply load that.
-			if (typeof ob == 'string'){
-				$.get(ob, function (data) {
-					$(postsList).html(data);
-					loadPosts(data);
-					twemoji.parse(postsList);
-				});
+      //- If it's a URL, simply load that.
+      if (typeof ob == 'string'){
+        $.get(ob, function (data) {
+          $(postsList).html(data);
+          loadPosts(data);
+          twemoji.parse(postsList);
+        });
 
-			//- If it's an object (Load More button), remove it and load next page.
-			} else {
+      //- If it's an object (Load More button), remove it and load next page.
+      } else {
 
-				//- Get url to load next page.
-				let url = embedUrl + ob.data('next_url');
+        //- Get url to load next page.
+        let url = embedUrl + ob.data('next_url');
 
-				//- Remove this element to prevent future triggers.
-				ob.parents('li').remove();
+        //- Remove this element to prevent future triggers.
+        ob.parents('li').remove();
 
-				$.get(url, function (data) {
-					$(postsList).append(data);
-					loadPosts(data);
-					twemoji.parse(postsList);
-				});
+        $.get(url, function (data) {
+          $(postsList).append(data);
+          loadPosts(data);
+          twemoji.parse(postsList);
+        });
 
-			}
-		}
+      }
+    }
 
-		//- Get the embed_url attribute of posts-list.
-		triggerLoadPosts(embedUrl);
+    //- Get the embed_url attribute of posts-list.
+    triggerLoadPosts(embedUrl);
 
-		//- Trigger on scroll.
-		$(window).scroll(function() {
-			toggleAutoplay();
+    //- Trigger on scroll.
+    $(window).scroll(function() {
+      toggleAutoplay();
 
-			//- Pagination: load more posts when in viewport.
-			$('.js-load-more').each(function() {
-				if ($(this).is(':in-viewport()')){
-					triggerLoadPosts($(this));
-				}
-			});
-		});
+      //- Pagination: load more posts when in viewport.
+      $('.js-load-more').each(function() {
+        if ($(this).is(':in-viewport()')){
+          triggerLoadPosts($(this));
+        }
+      });
+    });
 
-		//- Trigger on clicking Load More.
-		$('body').on('click', '.js-load-more', function() {
-			triggerLoadPosts($(this));
-		});
-	});
+    //- Trigger on clicking Load More.
+    $('body').on('click', '.js-load-more', function() {
+      triggerLoadPosts($(this));
+    });
+  });
 | {% endblock javascript_extra %}
 
 //- This page has infinite scroll, footer is shoveled in the sidebar.
