Use the media property instead of postmedia_set
The postmedia_set references data that has been migrated to media and
the StaticAsset models. In a future commit PostMedia and the related
models will be removed, so the first step is to remove any reference
to it.

--- a/dillo/templates/dillo/components/_post_list_element.pug
+++ b/dillo/templates/dillo/components/_post_list_element.pug
@@ -12,7 +12,7 @@ li.post-container(
   | {% include 'dillo/components/_post_header.pug' with post=post show_tags=true %}
 
   .post-media
-    | {% if post.postmedia_set.all.count > 1 %}
+    | {% if post.media.count > 1 %}
     span.post-label-icon
       i.i-layers
     | {% endif %}
