--- a/dillo/templates/dillo/widgets/textarea_with_media.html
+++ b/dillo/templates/dillo/widgets/textarea_with_media.html
@@ -4,16 +4,16 @@
 <div id="uppy-drop-area"></div>
 
 {% verbatim %}
-<label v-if="postMedia.length">Post Media:</label>
+<label v-if="media.length">Post Media:</label>
 <ul>
-  <li v-for="media in postMedia">
+  <li v-for="static_asset in media">
       <div class="btn btn-info btn-sm"
-           v-if="media.hash_id"
-           @click="copyToClipboard('{media ' + media.hash_id + '}')">
-          <span>{{ media.hash_id }}</span>
-      </div> {{ media.name }}
+           v-if="static_asset.hash_id"
+           @click="copyToClipboard('{media ' + static_asset.hash_id + '}')">
+          <span>{{ static_asset.hash_id }}</span>
+      </div> {{ static_asset.name }}
       <div class="btn btn-danger btn-sm"
-           @click="removePostMedia(media.post_media_id)">
+           @click="removeMedia(static_asset.entity_media_id)">
         <span><i class="i-trash"></i><span>Delete</span></span>
       </div>
   </li>
