--- a/dillo/templates/dillo/widgets/textarea_with_media.html
+++ b/dillo/templates/dillo/widgets/textarea_with_media.html
@@ -4,19 +4,21 @@
 <div id="uppy-drop-area" class="entity-drop-area"></div>
 
 {% verbatim %}
-<label v-if="media.length">Post Media:</label>
-<ul>
-  <li v-for="static_asset in media">
-      <div class="btn btn-info btn-sm"
-           v-if="static_asset.hash_id"
-           @click="copyToClipboard('{media ' + static_asset.hash_id + '}')">
-          <span>{{ static_asset.hash_id }}</span>
-      </div> {{ static_asset.name }}
-      <div class="btn btn-danger btn-sm"
-           @click="removeMedia(static_asset.entity_media_id)">
-        <span><i class="i-trash"></i><span>Delete</span></span>
-      </div>
-  </li>
-</ul>
+<div class="entity-media-list">
+  <label v-if="media.length">Post Media:</label>
+  <ul>
+    <li v-for="static_asset in media">
+        <div class="btn btn-info btn-sm"
+             v-if="static_asset.hash_id"
+             @click="copyToClipboard('{media ' + static_asset.hash_id + '}')">
+            <span><i class="i-copy"></i> <span>Copy Embed Code</span></span>
+        </div> [{{ static_asset.hash_id }}] {{ static_asset.name }}
+        <div class="btn btn-danger btn-sm"
+             @click="removeMedia(static_asset.entity_media_id)">
+          <span>Delete</span>
+        </div>
+    </li>
+  </ul>
+</div>
 {% endverbatim %}
 
