Comments: prevent textarea horizontal scaling

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -192,6 +192,7 @@
 
   textarea
     border-top-left-radius: var(--border-radius-sm)
+    min-width: 100%
 
 // Shows the "Login to comment" button.
 .comment-form-login
