Embed: Add alt tag to image embeds

--- a/dillo/templates/dillo/components/media_embeds/file_image.pug
+++ b/dillo/templates/dillo/components/media_embeds/file_image.pug
@@ -1,6 +1,6 @@
 | {% if link %}
 a(href="{{ link }}")
-  img(src="{{ media.source.url }}")
+  img(src="{{ media.source.url }}", alt="{{ media.source_filename }}")
 | {% else %}
-img(src="{{ media.source.url }}")
+img(src="{{ media.source.url }}", alt="{{ media.source_filename }}")
 | {% endif %}
