--- a/dillo/templates/dillo/components/media_embeds/file_image.pug
+++ b/dillo/templates/dillo/components/media_embeds/file_image.pug
@@ -1,6 +1,11 @@
 | {% if link %}
-a(href="{{ link }}")
-  img(src="{{ media.source.url }}", alt="{{ media.source_filename }}")
+a(href="{{ link }}", title="Open link", target="_blank")
+  img.media-embed-image(
+    alt="{{ media.source_filename }}",
+    src="{{ media.source.url }}")
 | {% else %}
-img(src="{{ media.source.url }}", alt="{{ media.source_filename }}")
+img.media-embed-image.expand(
+  alt="{{ media.source_filename }}",
+  class="js-media-expand",
+  src="{{ media.source.url }}")
 | {% endif %}
